solo importer